--- a/manazment/poznam/anotherPage.html
+++ b/manazment/poznam/anotherPage.html
@@ -24,7 +24,7 @@
   <div class="message">
     <h1>Copying detected</h1>
     <p>Click this text 👇 to go back to initial page</p>
-    <a href="../../index.html">Try again</a>
+    <a href="../index.html">Try again</a>
   </div>
 </body>
 </html>
