--- a/manazment/poznam/dontmatchIP.html
+++ b/manazment/poznam/dontmatchIP.html
@@ -24,7 +24,7 @@
   <div class="message">
     <h1>Your IP is not in list</h1>
     <p>Click this text 👇 to try again</p>
-    <a href="../index.html">Try again</a>
+    <a href="index.html">Try again</a>
   </div>
 </body>
 </html>
